--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 body {
   background-color: rgb(33, 33, 33);
   color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
