--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,3 +1,9 @@
+.active {
+    border: 2px solid #c46e28;
+    padding: 2px 8px;
+    border-radius: 100px;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
