--- a/src/Pages/Rockets.css
+++ b/src/Pages/Rockets.css
@@ -45,7 +45,7 @@
   border-collapse: separate;
 }
 
-.rocket-txt button {
+.btn1 {
   padding: 10px 40px;
   background-color: #ca742d;
   cursor: pointer;
@@ -58,13 +58,46 @@
   box-shadow: 2px 2px #00d7c6;
 }
 
-.rocket-txt button:hover {
+.btn1:hover {
   background-color: #00d7c6;
   box-shadow: 2px 2px #ca742d;
+}
+
+.btn2 {
+  padding: 10px 40px;
+  background-color: #00d7c6;
+  cursor: pointer;
+  color: white;
+  border-radius: 10px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+  font-weight: 500;
+  outline: none;
+  border: none;
+  box-shadow: 2px 2px #ca742d;
+}
+
+.btn2:hover {
+  background-color: #ca742d;
+  box-shadow: 2px 2px #00d7c6;
 }
 
 .reserve {
   border-radius: 5px;
   padding: 2px 4px;
   background-color: #ca742d;
+  animation: bg 2s infinite;
+}
+
+@keyframes bg {
+  0% {
+    background-color: #ff9238;
+  }
+
+  50% {
+    background-color: #02e2cf;
+  }
+
+  100% {
+    background-color: #ff9238;
+  }
 }
